--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
                     </p>
                     <div class="hero-cta">
                         <a href="#projects" class="btn btn-primary">View Projects</a>
+                        <a href="https://drive.google.com/file/d/1hG3e4qqDHoYEdfqsWv77tGDjHh3O--3E/view?usp=sharing"
+                            target="_blank" class="btn btn-secondary">
+                            <svg width="18" height="18" fill="none" stroke="currentColor" stroke-width="2"
+                                viewBox="0 0 24 24" style="margin-right: 8px;">
+                                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" />
+                                <polyline points="14 2 14 8 20 8" />
+                                <line x1="16" y1="13" x2="8" y2="13" />
+                                <line x1="16" y1="17" x2="8" y2="17" />
+                                <line x1="10" y1="9" x2="8" y2="9" />
+                            </svg>
+                            Resume
+                        </a>
                         <a href="#contact" class="btn btn-secondary">Get in Touch</a>
                     </div>
                 </div>
@@ -96,10 +108,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="scroll-indicator">
-            <span>Scroll Down</span>
-            <div class="scroll-arrow"></div>
         </div>
     </section>
 
@@ -198,63 +206,107 @@
             <div class="tech-stack">
                 <h3 class="tech-stack-title">Technologies</h3>
                 <div class="tech-tags">
-                    <span class="tech-tag">Flutter</span>
-                    <span class="tech-tag">Dart</span>
-                    <span class="tech-tag">GetX</span>
-                    <span class="tech-tag">Firebase</span>
-                    <span class="tech-tag">REST APIs</span>
-                    <span class="tech-tag">MongoDB</span>
-                    <span class="tech-tag">Spring Boot</span>
-                    <span class="tech-tag">Figma</span>
-                    <span class="tech-tag">Git</span>
-                    <span class="tech-tag">Swagger</span>
-                    <span class="tech-tag">fl_chart</span>
-                    <span class="tech-tag">Syncfusion</span>
-                    <span class="tech-tag">Java</span>
+                    <span class="tech-tag">
+                        <img src="assets/logos/flutter.png" alt="Flutter" width="20" height="20">
+                        Flutter
+                    </span>
+                    <span class="tech-tag">
+                        <img src="assets/logos/dart.png" alt="Dart" width="20" height="20">
+                        Dart
+                    </span>
+                    <span class="tech-tag">
+                        <img src="assets/logos/getx.png" alt="GetX" width="20" height="20">
+                        GetX
+                    </span>
+                    <span class="tech-tag">
+                        <img src="assets/logos/firebase.png" alt="Firebase" width="20" height="20">
+                        Firebase
+                    </span>
+                    <span class="tech-tag">
+                        <img src="assets/logos/rest_api.png" alt="REST APIs" width="20" height="20">
+                        REST APIs
+                    </span>
+                    <span class="tech-tag">
+                        <img src="assets/logos/mongodb.png" alt="MongoDB" width="20" height="20">
+                        MongoDB
+                    </span>
+                    <span class="tech-tag">
+                        <img src="assets/logos/spring_boot.png" alt="Spring Boot" width="20" height="20">
+                        Spring Boot
+                    </span>
+                    <span class="tech-tag">
+                        <img src="assets/logos/figma.png" alt="Figma" width="20" height="20">
+                        Figma
+                    </span>
+                    <span class="tech-tag">
+                        <img src="assets/logos/git.png" alt="Git" width="20" height="20">
+                        Git
+                    </span>
+                    <span class="tech-tag">
+                        <img src="assets/logos/swagger.png" alt="Swagger" width="20" height="20">
+                        Swagger
+                    </span>
                 </div>
             </div>
         </div>
     </section>
-
     <!-- Experience Section -->
     <section id="experience" class="experience section-padding">
         <div class="container">
             <h2 class="section-title">Work Experience</h2>
-            <div class="timeline">
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-content">
-                        <div class="timeline-header">
-                            <h3>Software Engineer</h3>
-                            <span class="company">Graspear Solutions Private Limited</span>
-                            <span class="period">Sep 2024 - Present</span>
-                        </div>
-                        <div class="timeline-body">
-                            <p class="experience-summary">
-                                Developing high-performance cross-platform mobile applications using Flutter, GetX, REST
-                                APIs, and Firebase,
-                                while collaborating with designers to deliver responsive, production-ready UI/UX.
-                            </p>
-                        </div>
+            <div class="experience-stack" id="experienceStack">
+                <!-- Collapsed Stack (Left Side) -->
+                <div class="stack-trigger">
+                    <div class="stack-cards">
+                        <div class="stack-card stack-card-1"></div>
+                        <div class="stack-card stack-card-2"></div>
+                        <div class="stack-card stack-card-3"></div>
+                    </div>
+                    <div class="stack-label">
+                        <h3>Work Experience</h3>
+                        <p>Click to explore →</p>
                     </div>
                 </div>
 
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-content">
-                        <div class="timeline-header">
-                            <h3>Trainee Software Engineer</h3>
-                            <span class="company">Graspear Solutions Private Limited</span>
-                            <span class="period">May 2024 - Sep 2024</span>
+                <!-- Expanded Content (Slides in from Right) -->
+                <div class="experience-expanded">
+                    <div class="exp-card">
+                        <div class="exp-header">
+                            <span class="exp-number">01</span>
+                            <div class="exp-timeline">May 2024 - Sep 2024</div>
                         </div>
-                        <div class="timeline-body">
-                            <p class="experience-summary">
-                                Completed intensive hands-on training in Flutter development and mobile app
-                                architecture,
-                                quickly transitioning to production-level work within two months, building UI
-                                components,
-                                integrating APIs, and gaining expertise in Figma, Git, and agile practices.
-                            </p>
+                        <h3>Trainee Software Engineer</h3>
+                        <p class="exp-company">Graspear Solutions Private Limited</p>
+                        <p class="exp-desc">
+                            Completed intensive hands-on training in Flutter development and mobile app architecture,
+                            quickly transitioning to production-level work within two months.
+                        </p>
+                        <div class="exp-tags">
+                            <span>Flutter</span>
+                            <span>Figma</span>
+                            <span>Git</span>
+                            <span>Agile</span>
+                        </div>
+                    </div>
+
+                    <div class="exp-card current">
+                        <div class="current-tag">Current</div>
+                        <div class="exp-header">
+                            <span class="exp-number">02</span>
+                            <div class="exp-timeline">Sep 2024 - Present</div>
+                        </div>
+                        <h3>Software Engineer</h3>
+                        <p class="exp-company">Graspear Solutions Private Limited</p>
+                        <p class="exp-desc">
+                            Developing high-performance cross-platform mobile applications using Flutter, GetX, REST
+                            APIs, and Firebase,
+                            while collaborating with designers to deliver responsive, production-ready UI/UX.
+                        </p>
+                        <div class="exp-tags">
+                            <span>Flutter</span>
+                            <span>GetX</span>
+                            <span>Firebase</span>
+                            <span>REST APIs</span>
                         </div>
                     </div>
                 </div>
@@ -299,7 +351,7 @@
                     <div class="project-tags">
                         <span class="tag">Flutter</span>
                         <span class="tag">Dart</span>
-                        <span class="tag">Charts</span>
+                        <span class="tag">Paint</span>
                         <span class="tag">Open Source</span>
                     </div>
                 </div>
@@ -496,6 +548,13 @@
                                 d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
                         </svg>
                         <span>LinkedIn</span>
+                    </a>
+                    <a href="mailto:vishnuprakash1709@gmail.com" class="social-link" aria-label="Email">
+                        <svg class="social-icon" viewBox="0 0 24 24" fill="currentColor">
+                            <path
+                                d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" />
+                        </svg>
+                        <span>Email</span>
                     </a>
                 </div>
             </div>
